# gestvenv

./: .bandit  .gitignore  .pre-commit-config.yaml  CHANGELOG-ephemeral.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PR_CLEANUP_PLAN.md  README.md  README_INSTALL.md  RELEASE_NOTES_v2.0.md  check_version.py  file.sh  fix_encoding.py  install_commands.sh  mkdocs.yml  pyproject.toml  reinstall.sh  requirements.txt  setup.cfg  setup.py  setup_gestvenv.sh  tag_version.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  performance_issue.md
.github/workflows/: ci-cd.yml  ci.yml  docs.yml  mkdoc.yml  release.yml  security.yml  vscode-extension.yml  web-ui.yml
Documents/: Functional_Specifications_and_architectural_design.md  docs.md  docs_next.md  gestvenv-architecture.mermaid  gestvenv-specifications.md  gestvenv_architecture.mermaid  path.md  user_docs.md
docs/: changelog.md  cli-reference-complete.md  document.md  ephemeral-environments.md  faq.md  gestvenv_project_structure.md  index.md  installation.md  migration-to-ephemeral.md  migration-v2.md  quickstart.md  vs-code-extension-guide.md  vscode-extension.md  web-api.md  web-ui-installation.md
docs/adr/: 0001-ephemeral-environments.md  0002-async-architecture.md  0003-backend-selection.md
docs/advanced/: ci-cd.md  customization.md  scripting.md  troubleshooting.md
docs/api/: backends.md  core.md  ephemeral.md  services.md
docs/architecture/: ide-integrations.md  ide-phase3.md
docs/cli-reference/: environment-commands.md  global-options.md  overview.md  package-commands.md  utility-commands.md
docs/developer-guide/: api.md  architecture.md  code-structure.md  contributing.md  testing.md
docs/development/: ARCHITECTURE.md
docs/examples/: data-science.md  devops.md  team-workflows.md  web-projects.md
docs/getting-started/: basic-commands.md  first-environment.md  installation.md
docs/macros/: macros_script.sh
docs/releasenotes/: gv-1.1.1.rst
docs/stylesheets/: extra.css
docs/troubleshooting/: COMMON_ISSUES.md
docs/user-guide/: configuration.md  environment-management.md  import-export.md  package-management.md  workflows.md
docs/user_guide/: backends.md  basics.md  templates.md
examples/: ephemeral_examples.py
extensions/vscode/: .eslintrc.json  .mocharc.json  CHANGELOG.md  LICENSE  README.md  compile.sh  package-lock.json  package.json  tsconfig.json  webpack.config.js
extensions/vscode/scripts/: package.sh
extensions/vscode/src/: extension.ts
extensions/vscode/test-workspace/: test.py
gestvenv/: __init__.py  __version__.py  _version.py  cli.py  cli_main.py  ephemeral.py
gestvenv/Backends/: base_backend.py
gestvenv/backends/: __init__.py  backend_manager.py  base.py  base_backend.py  pdm_backend.py  pip_backend.py  poetry_backend.py  uv_backend.py
gestvenv/cli/: __init__.py  __main__.py
gestvenv/cli/commands/: __init__.py  deps.py  diff.py  python_cmd.py  security.py
gestvenv/core/: __init__.py  config_manager.py  config_manager_v1.0.py  env_manager.py  environment_manager.py  exceptions.py  models.py  package_manager.py  strategies.py
gestvenv/core/ephemeral/: __init__.py  cgroups.py  cleanup.py  context.py  exceptions.py  lifecycle.py  manager.py  models.py  monitoring.py  storage.py
gestvenv/observability/: __init__.py  logging_config.py  metrics.py  tracing.py
gestvenv/python/: __init__.py  downloader.py  manager.py  registry.py
gestvenv/services/: __init__.py  async_cache_service.py  cache_service.py  diagnostic_service.py  diagnostic_services.py  environment_service.py  migration_service.py  package_service.py  system_service.py  template_service.py
gestvenv/templates/: __init__.py  base_template.py  default_config.json
gestvenv/templates/builtin/: __init__.py  basic.py  cli.py  data_science.py  django.py  fastapi.py  flask.py  web.py
gestvenv/templates/user/: .gitkeep
gestvenv/tests/: __init__.py  pyproject.toml
gestvenv/utils/: __init__.py  async_utils.py  debug.py  error_handling.py  format_utils.py  logging_utils.py  migration_utils.py  path_handler.py  path_utils.py  performance.py  pyproject_parser.py  requirements_parser.py  retry.py  security.py  system_commands.py  system_utils.py  toml_handler.py  toml_utils.py  validation.py  validation_utils.py  validators.py
tests/: __init__.py  conftest.py  test_cli.py
tests/e2e/: __init__.py  conftest.py  test_complete_workflows.py  test_error_scenarios.py
tests/integration/: __init__.py  conftest.py  test_backend_compatibility.py  test_cache_integration.py  test_environment_workflow.py  test_migration_workflow.py  test_package_management.py  test_template_creation.py
tests/performance/: README.md  conftest.py  test_backend_performance.py  test_cache_performance.py  test_parsing_performance.py
tests/pytest/: test_format_utils.py  test_path_utils.py  test_system_utils.py  test_validation_utils.py
tests/pytest/test_core/: test_config_manager.py  test_env_manager.py  test_models.py
tests/test_services/: est_environment_service.py  test_cache_service.py  test_diagnostic_service.py  test_environment_service.py  test_package_service.py  test_service_init.py  test_system_service.py
tests/unit/: __init__.py  test_cli.py
tests/unit/core/: __init__.py  test_config_manager.py  test_environment_manager.py  test_exceptions.py  test_models.py
web/: .env.example  DEVELOPMENT.md  Dockerfile  README.md  docker-compose.yml  nginx.conf  requirements.txt  start-dev.sh
web/api/: __init__.py  dependencies.py  main.py  websocket.py
web/api/core/: config.py  dependencies.py
web/api/models/: __init__.py  environment.py  schemas.py
web/api/routes/: __init__.py  cache.py  environments.py  ide.py  packages.py  system.py  templates.py  websocket.py
web/api/services/: __init__.py  cache_service.py  environment_service.py  gestvenv_service.py  operation_service.py  (+2 more)
web/web-ui/: .eslintrc.cjs  .gitignore  cypress.config.ts  env.d.ts  index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
(+63 files in other folders)
